--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,20 @@
 	width: 100%;
 	height: 100%;
 	overflow: hidden;
+	color: #000;
+}
+
+a {
 	color: #fff;
+}
+
+a:hover {
+	color: #fff;
+	text-decoration: none;
+}
+
+.page a {
+	color: black;
 }
 
 .row section {
@@ -53,17 +66,17 @@
 }
 
 
-.box{
-	padding-top:20px;
-}
-
-.color  {
-	position: absolute;
-	width: 100%;
+.box, .color {
+	width:100%;
 	height: 100%;
 	 display: flex;
  	 align-items: center;
  	 justify-content: center;
+ 	text-align: center;
+}
+
+.color  {
+	position: absolute;
 }
 
 .white {
@@ -101,6 +114,14 @@
 .page {
 	position: absolute;
 	z-index: 0;
+	opacity: 0;
+	margin-left: 0;
+}
+
+.page-call {
+	width: 100%;
+	height: 100%;
+	position: relative;
 }
 
 .content {
