--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-	background-color: #333;
+  background-color: #333;
 }
 
 .container {
@@ -19,15 +19,11 @@ a:hover {
   text-decoration: none;
 }
 
-.page a {
-  color: black;
-}
-
 .close {
-	position: absolute;
-	top:5px;
-	right: 10px;
-	z-index: 1001;
+  position:fixed;
+  top: 5px;
+  right: 30px;
+  z-index: 1001;
 }
 
 .row section {
@@ -46,7 +42,7 @@ a:hover {
 }
 
 #portfolio {
-  background: url("img/home/portfolio.jpg") top center no-repeat;
+  background: url("img/home/portfolio.jpg") center center no-repeat;
   background-size: cover;
   -webkit-background-size: cover;
 }
@@ -55,7 +51,7 @@ a:hover {
 #web-design {
   top: 0;
   left: 50%;
-  background-color: rgba(153, 0, 0, 1);
+  background-color: rgba(115, 19, 19, 1);
   color: #fff;
 }
 
@@ -103,13 +99,17 @@ a:hover {
   display: flex;
   -webkit-box-align: center;
   -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
   -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   text-align: center;
+}
+
+#one h3 {
+  height: 2.3em;
 }
 
 .color {
@@ -125,11 +125,11 @@ a:hover {
 }
 
 .red {
-  background-color: rgba(153, 0, 0, 0.4);
+  background-color: rgba(115, 19, 19, 0.4);
 }
 
 .red:hover {
-  background-color: rgba(153, 0, 0, 0.8);
+  background-color: rgba(115, 19, 19, 0.8);
 }
 
 .blue {
@@ -148,13 +148,21 @@ a:hover {
   background-color: rgba(141, 212, 48, 0.8);
 }
 
+/* da vedere per rendere le scritte della pagina artwork 
+del colore dello schermo.page-art, .page-photo {
+  mix-blend-mode: screen;
+  background-color: rgba(0, 0, 0, 0.8);
+}*/
+
 .page {
   position: absolute;
   z-index: 0;
   opacity: 0;
   margin-left: 0;
+  padding:5px;
   overflow: scroll;
-  -webkit-overflow:scroll;
+  -webkit-overflow: scroll;
+  -webkit-overflow-scrolling:touch;
 }
 
 .page-one,
@@ -165,19 +173,33 @@ a:hover {
   height: 100%;
   position: relative;
 }
+
+#art-gal,
+#photo-gal {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -100;
+  opacity: 0;
+  margin-left: 0;
+  padding: 5px;
+  background: rgba(11, 25, 43, 1);
+}
 /*animazione elemento html esterno*/
 
 .content {
   -webkit-animation-name: content-fullsize;
-          animation-name: content-fullsize;
+  animation-name: content-fullsize;
   -webkit-animation-duration: 300ms;
-          animation-duration: 300ms;
+  animation-duration: 300ms;
   -webkit-animation-iteration-count: 1;
-          animation-iteration-count: 1;
+  animation-iteration-count: 1;
   -webkit-animation-timing-function: ease-in;
-          animation-timing-function: ease-in;
+  animation-timing-function: ease-in;
   -webkit-animation-fill-mode: forwards;
-          animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
 }
 
 @-webkit-keyframes content-fullsize {
@@ -212,15 +234,15 @@ a:hover {
 
 .content-negative {
   -webkit-animation-name: content-neg;
-          animation-name: content-neg;
+  animation-name: content-neg;
   -webkit-animation-duration: 300ms;
-          animation-duration: 300ms;
+  animation-duration: 300ms;
   -webkit-animation-iteration-count: 1;
-          animation-iteration-count: 1;
+  animation-iteration-count: 1;
   -webkit-animation-timing-function: ease-in;
-          animation-timing-function: ease-in;
+  animation-timing-function: ease-in;
   -webkit-animation-fill-mode: forwards;
-          animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
 }
 
 @-webkit-keyframes content-neg {
@@ -257,22 +279,92 @@ a:hover {
   }
 }
 
+.content-top {
+  -webkit-animation-name: content-top;
+  animation-name: content-top;
+  -webkit-animation-duration: 300ms;
+  animation-duration: 300ms;
+  -webkit-animation-iteration-count: 1;
+  animation-iteration-count: 1;
+  -webkit-animation-timing-function: ease-in;
+  animation-timing-function: ease-in;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  overflow: auto;
+  -webkit-overflow-scrolling:touch;
+  color: #fff;
+}
+
+@-webkit-keyframes content-top {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+    z-index: 1100;
+  }
+}
+
+@keyframes content-top {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+    z-index: 1100;
+  }
+}
+
+.awesome-txt {
+  opacity: 0;
+  -webkit-animation-name: text-opacity;
+  animation-name: text-opacity;
+  -webkit-animation-duration: 300ms;
+  animation-duration: 300ms;
+  animation-delay:400ms;
+  -webkit-animation-delay:400ms;
+  -webkit-animation-iteration-count: 1;
+  animation-iteration-count: 1;
+  -webkit-animation-timing-function: ease-in;
+  animation-timing-function: ease-in;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+}
+
+@-webkit-keyframes text-opacity {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes text-opacity {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 /*fine animazione html esterno*/
-/*animazione bg home*/
+/*animazione awesome bg
+
 #portfolio:hover,
 #web-design:hover,
 #illustrations:hover,
 #contacts:hover {
   -webkit-animation-name: awesome-bg;
-          animation-name: awesome-bg;
+  animation-name: awesome-bg;
   -webkit-animation-duration: 1500ms;
-          animation-duration: 1500ms;
+  animation-duration: 1500ms;
   -webkit-animation-iteration-count: 15;
-          animation-iteration-count: 15;
+  animation-iteration-count: 15;
   -webkit-animation-timing-function: linear;
-          animation-timing-function: linear;
+  animation-timing-function: linear;
   -webkit-animation-direction: alternate;
-          animation-direction: alternate;
+  animation-direction: alternate;
 }
 
 @-webkit-keyframes awesome-bg {
@@ -299,7 +391,7 @@ a:hover {
 /*fine animazione bg home*/
 
 .pd10 {
-	padding: 10px;
+  padding: 10px;
 }
 
 .pd30 {
@@ -307,14 +399,14 @@ a:hover {
 }
 
 .mt20 {
-	margin-top: 20px;
+  margin-top: 20px;
 }
 
 .mb20 {
   margin-bottom: 20px;
 }
-
 /*lightbox*/
+
 .lightbox {
   display: none;
   position: fixed;
@@ -324,27 +416,60 @@ a:hover {
   text-align: center;
   top: 0;
   left: 0;
-  background: rgba(0,0,0,0.8);
+  background: rgba(0, 0, 0, 0.8);
 }
-/*
-.lightbox img {
-  max-width: 90%;
-  max-height: 80%;
-  margin-top: 2%;
+
+ .resize {
+  max-width: 60%;
+  max-height: 50%;
+  margin: 0 auto;
 }
-*/
+
 .lightbox:target {
   outline: none;
   display: block;
 }
 
-#work1> .row, #work2> .row, #work3> .row, #work4> .row {
+#work1> :first-child ,
+#work2> :first-child,
+#work3> :first-child,
+#work4> :first-child {
   display: inline-block;
   width: 60%;
   color: #fff;
 }
 
-.lightbox img {
-  position: relative;
+.lghtbox-size {
+  max-width: 55%;
+  margin: 30px auto;
+}
+/*lightbox fine*/
+
+.btn-danger {
+  background-color: #B51E1E;
 }
 
+.hvr-back-pulse:hover,
+.hvr-back-pulse:focus,
+.hvr-back-pulse:active {
+  background-color: #1a9f9f;
+  color: white;
+}
+
+@media screen and (max-width:1024px) {
+#work1> :first-child ,
+#work2> :first-child,
+#work3> :first-child,
+#work4> :first-child , .lghtbox-size, .resize {
+  display: inline-block;
+  width: 90%;
+  max-width: 90%;
+  color: #fff;
+}
+
+.lghtbox-size, .resize {
+  width: 90%;
+  max-width: 90%;
+  max-height: 90%;
+}
+}
